# Koopman-Dynamical-Response

./: .gitignore  pyproject.toml
docs/: index.html
experiments/: 1D_ChaoticMap_Example.py  2D_ChaoticMap_Example.py  GEMB.py  Lorenz63_example.py  Lorenz96_example.py
experiments/__marimo__/session/: 1D_ChaoticMap_Example.py.json  lorenz_integration.py.json
notebooks/: Correlation_Functions.ipynb  Multiple_Responses.mat  Plotting.ipynb  Response_Lorenz_Z.mat  new.ipynb
scripts/: LinearResponseExperiments.py  perform_edmd.py  run_edmd.sh
src/koopman_response/: __init__.py
src/koopman_response/algorithms/: __init__.py  dictionaries.py  edmd.py  kdmd.py  kernels.py  regularization.py  spectrum.py
src/koopman_response/systems/: __init__.py  chaotic_map_2d.py  integrators.py  lorenz63.py
src/koopman_response/utils/: __init__.py  koopman.py  preprocessing.py  signal.py
tests/: test_kdmd_response.py  test_regularization.py  test_weighted_kernel.py
